--- a/src/views/files.hbs
+++ b/src/views/files.hbs
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Files</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="../styles/style.css">
+    </head>
 
-<body>
-    <nav class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./files">Inicio</a>
-          </li>
-    </nav>
-    <div class="container">
-        <form action="/file" class="card-body" method="post">
-            <h3>Cedula</h3>
-            <div class="form-group">
-                <input type="text" name="cedula" id="cedula" placeholder="Cedula">
+    <body>
+         
+        <div class="background">
+            <div class="menu">
+                <nav class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./files">Inicio</a>
+                    </li>
+                </nav>
             </div>
-            <br>
-            <div class="form-group">
-                <input type="submit" class="btn btn-primary" id="button">
+            {{#each errors}}
+              <div class="alert alert-danger alert-dismissible fade show" role="alert">
+              {{text}}
+             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+             </div>
+           {{/each}} 
+            <div class="form">
+                <form action="/file" class="card-body" method="post">
+                    <img class="img" src="../assert/buscador.jpg"/>
+                    <h3 class="text">Cedula</h3>
+                    <div class="form-group">
+                        <input type="text" name="cedula" id="cedula" placeholder="Cedula" class="input">
+                    </div>
+                    <br>
+                    <div class="form-group text">
+                        <button type="submit" class="btn btn-info" id="button">Buscar</button>
+                    </div>
+                </form>
             </div>
-        </form>
-    </div>
-    <script src='../routes/files.js'></script>
-</body>
+        </div>
+        
+    </body>
 
 </html>
