--- a/src/views/list.hbs
+++ b/src/views/list.hbs
@@ -8,18 +8,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
      rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
 </head>
 <body>
-    <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./files">Inicio</a>
-          </li>
-    </ul>
+  {{#each errors}}
+     <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {{text}}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+   {{/each}}
 
-    <h3>Aqui va la informacion del contacto</h3>
-    
+   <div class="background">
+    <div class="menu">
+      <nav class="nav">
+          <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./login">Login</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./files">Inicio</a>
+          </li>
+      </nav>
+  </div>
+
+  <div class="info">
+
+    <div class="card">
+      <h5 class="card-header">Datos de: {{cedula1}}</h5>
+      <div class="card-body">
+        <h5 class="card-title">Nombre: {{name1}}</h5>
+        <h5 class="card-title">Apellido: {{lastName1}}</h5>
+        <h5 class="card-title">Correo: {{email1}}</h5>
+        <h5 class="card-title">Usuario: {{userr}}</h5>
+        <h5 class="card-title">Contraseña: {{passwordd}}</h5>
+      </div>
+    </div>
+</div>
+  </div>
 </body>
 </html>
