--- a/src/views/registro.hbs
+++ b/src/views/registro.hbs
@@ -4,37 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
      rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
 </head>
 <body>
-    <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./login.hbs">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./files.hbs">Inicio</a>
-          </li>
-    </ul>
-     <div class="container">
-        <form action="/registro" class="card-body" method="post" id="formul">
-            <h3>Registro</h3>
-            <div class="form-group">
-                <input type="text" name="user" id="user" placeholder="User">
-            </div>
-            <br>
-            <div class="form-group">
-                <input type="text" name="password" id="password" placeholder="Password">
-            </div>
-            <br>
-            <div class="form-group">
-                <input type="submit" class="btn btn-primary" id="button">
-            </div>
-        </form>
+    {{#each errors}}
+     <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {{text}}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <script src='../routes/files.js'></script>
+   {{/each}}
+   <div class="background">
+        <div class="menu">
+            <nav class="nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./files">Inicio</a>
+                </li>
+            </nav>
+        </div>
+        <div class="form">
+            <form action="/login" class="card-body" method="post" id="formul">
+                <img class="img" src="../assert/profile_info.png"/>
+                <h3 class="text">Login</h3>
+                <div class="form-group text">
+                    <input type="text" name="user" id="user" placeholder="User" class="input">
+                </div>
+                <br>
+                <div class="form-group text">
+                    <input type="password" name="password" id="password" placeholder="Password" class="input">
+                </div>
+                <br>
+                <div class="form-group text">
+                    <input type="submit" class="btn btn-primary" id="button">
+                </div>
+            </form>
+        </div>  
+    </div>
+    
+    
     
 </body>
 </html>
