--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -24,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="./login">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="http://f9c8-186-169-26-120.ngrok.io/files">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href=" https://7da7-191-156-230-91.ngrok.io/files">Inicio</a>
                 </li>
             </nav>
         </div>
