--- a/src/views/registro.hbs
+++ b/src/views/registro.hbs
@@ -29,9 +29,9 @@
             </nav>
         </div>
         <div class="form">
-            <form action="/login" class="card-body" method="post" id="formul">
+            <form action="/registro" class="card-body" method="post" id="formul">
                 <img class="img" src="../assert/profile_info.png"/>
-                <h3 class="text">Login</h3>
+                <h3 class="text">Registro</h3>
                 <div class="form-group text">
                     <input type="text" name="user" id="user" placeholder="User" class="input">
                 </div>
